--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,93 +1,98 @@
-
-/* 
-    Created on : 20 sep. 2023, 19:24:26
-    Author     : Amber B
-*/
-p{
-    color:black;
-     font-family: serif;
-    
+p {
+    color: black;
+    font-family: serif;
 }
 
-aside p{
-    color:whitesmoke;
+a {
+    color: black;
 }
 
-h1, h2, h3 {
-    color:black;
-    
+aside p {
+    color: whitesmoke;
 }
 
-.aviso{
-    background-color: greenyellow; 
-    color:green;
-        
+h1 {
+    color: black;
 }
 
-tr:nth-child(odd){
+h2,
+h3 {
+    color: black;
+}
+
+.aviso {
+    background-color: greenyellow;
+    color: green;
+}
+
+tr:nth-child(odd) {
     background-color: green;
     color: white;
 }
-tr:nth-child(even){
+
+tr:nth-child(even) {
     background-color: blue;
     color: white;
 }
-tread tr th{
+
+thead tr th {
     background-color: black;
     color: white;
 }
-nav a{
-    text-decoration: none;
+
+header a {
     background-color: green;
-    color: white;
-}
-nav a:hover{
-    background-color: lightcyan;
     color: black;
+    text-decoration: none;
+    margin: 0 10px; /* Adjust spacing as needed */
+}
+
+header a:hover {
+    background-color: lightcyan;
 }
 
 body {
     box-sizing: border-box;
-    margin:0;
-    padding: 80px 20px 0;
+    margin: 0;
+    padding: 120px 20px 0; /* Adjusted the top padding to accommodate the fixed header */
     background-color: whitesmoke;
 }
 
 header {
     position: fixed;
-    background-color:blue;
-    top:0;
-    left:0;
-    height:80px;
-    width:100%;
+    background-color: blue;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 100%;
 }
 
 aside {
     position: fixed;
-    background-color:graytext;
+    background-color: navy;
     top: 80px;
-    left:0;
-    bottom:20px;
-    width:20%;
+    left: 0;
+    bottom: 10px;
+    width: 20%;
 }
 
 section {
     overflow-y: scroll;
     position: fixed;
-    background-color:aquamarine;
+    background-color: aquamarine;
     top: 80px;
-    left:20%;
-    bottom:20px;
-    width:80%;
+    left: 20%;
+    bottom: 20px;
+    width: 80%;
 }
 
 footer {
     text-align: center;
     position: fixed;
-    background-color:white;
+    background-color: white;
     color: black;
-    top: 0;
-    left:0%;
-    bottom:20px;
-    width:100%;
+    top: 10px; /* Added 'px' to specify the unit */
+    left: 0%;
+    bottom: 0px;
+    width: 100%;
 }
