--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,98 +1,113 @@
-p {
-    color: black;
-    font-family: serif;
+/*Estos es un comentario*/
+/*
+section p {
+    color:blue;
 }
-
-a {
-    color: black;
-}
-
 aside p {
-    color: whitesmoke;
+    color:red;
+}
+h1,h2,h3{
+    font-family: cursive;
 }
 
-h1 {
-    color: black;
+.aviso{
+    background-color: red;
+    color:yellow;
+}*/
+tr:nth-child(odd){
+    background-color: #8181bd;
+    color:yellow;
 }
-
-h2,
-h3 {
-    color: black;
+tr:nth-child(even){
+    background-color: #81056e;
+    color:yellow;
 }
-
-.aviso {
-    background-color: greenyellow;
-    color: green;
-}
-
-tr:nth-child(odd) {
-    background-color: green;
-    color: white;
-}
-
-tr:nth-child(even) {
-    background-color: blue;
-    color: white;
-}
-
 thead tr th {
     background-color: black;
-    color: white;
-}
-
-header a {
-    background-color: green;
-    color: black;
+    color:white;
+}/*
+nav a {
     text-decoration: none;
-    margin: 0 10px; /* Adjust spacing as needed */
+    background-color: green;
+    color:white;
 }
-
-header a:hover {
-    background-color: lightcyan;
-}
-
-body {
+nav a:hover {
+    text-decoration: none;
+    background-color: red;
+    color:yellow;
+}*/
+body{
     box-sizing: border-box;
-    margin: 0;
-    padding: 120px 20px 0; /* Adjusted the top padding to accommodate the fixed header */
+    margin:0;
+    padding: 90px 20px 0;/*arriba abajo lados*/
     background-color: whitesmoke;
 }
-
-header {
+.header{
     position: fixed;
-    background-color: blue;
-    top: 0;
-    left: 0;
-    height: 80px;
+    background-color: #076af0;
+    top:0;
+    left:0;
+    height: 90px;
     width: 100%;
 }
-
-aside {
+.nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.nav-link{
+    color: white;
+    text-decoration: none;
+}
+.nav-menu{
+    display: flex;
+    list-style: none;
+    margin-right: 40px;
+}
+.nav-menu-item{
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 90px;
+}
+.nav-menu-link{
+    padding: 8px 12px;
+    transition: 0.5s;
+}
+.nav-menu-link:hover{
+    background-color: #024070;
+    border-radius: 10px;
+ 
+}
+.logo{
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+}
+aside{
     position: fixed;
-    background-color: navy;
-    top: 80px;
-    left: 0;
-    bottom: 10px;
+    background-color: bisque;
+    top:90px;
+    left:0;
+    bottom: 20px;
     width: 20%;
 }
-
-section {
+section{
     overflow-y: scroll;
     position: fixed;
     background-color: aquamarine;
-    top: 80px;
-    left: 20%;
+    top:90px;
+    left:20%;
     bottom: 20px;
     width: 80%;
 }
-
-footer {
+footer{
     text-align: center;
     position: fixed;
-    background-color: white;
-    color: black;
-    top: 10px; /* Added 'px' to specify the unit */
-    left: 0%;
-    bottom: 0px;
+    background-color: black;
+    color:white;
+    left:0;
+    bottom: 0;
+    height: 20px;
     width: 100%;
 }
+
