--- a/com.tienda/src/main/resources/templates/index.html
+++ b/com.tienda/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
     
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
+        <section th:replace="~{carrito/fragmentos :: listadoProductos}"/>
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
     </body>
     
